# rust_ffi_benchmark

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  flake.nix
benches/: ffi_bench.rs
foreign/_include/: numbers.h
foreign/go/: add.go  add_tinygo.go  add_wasm.go
foreign/hs/: Add.hs
foreign/nim/: add.nim
foreign/zig/: add.zig  build.zig
src/: main.rs
