[package]
name = "caller"
version = "0.1.0"
edition = "2021"

[dependencies]
libloading = "0.8"
wasmtime = "31.0.0"
wasmtime-wasi = { version = "31.0.0", features = ["preview1"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ffi_bench"
harness = false
